Queue implementation using linked list